tenzir/integration/data/reference/pipelines_local/test_parse_operators/step_15.ref
error: loader for `scheme` scheme could not be found
 --> <input>:1:6
  |
1 | from scheme:foo.json read json
  |      ^^^^^^ 
  |
  = hint: must be one of -, file, ftp, ftps, http, https, stdin, tcp, udp
  = docs: https://docs.tenzir.com/connectors